updated on 18th July

--- a/portfolio.html
+++ b/portfolio.html
@@ -154,6 +154,145 @@
             <section class="timeline">
               <ul>
                 <li
+                  onclick="window.open('https://github.com/AditiNarkar/Web3.0-Hardhat-DeFi')"
+                >
+                  <div class="timeline-child">
+                    <img
+                      class="other-project-crab"
+                      alt=""
+                      src="./public/crabremovebgpreview-1@2x.png"
+                    />
+                    <time> Third Year Degree</time>
+                    <div class="discovery">
+                      <h1>WEB3.0 Hardhat DeFi</h1>
+                    </div>
+                    <div class="scientist">
+                      <span>
+                        Decentralized Leverage Trading Finance platform made
+                        using AggregatorV3Interface, ERC20 Tokens, Lending Pool,
+                        DAI WETH and AAVE protocol (atokens).
+                      </span>
+                    </div>
+                  </div>
+                </li>
+
+                <li
+                  onclick="window.open('https://github.com/AditiNarkar/Web3.0-NFT-Marketplace-Backend')"
+                >
+                  <div class="timeline-child">
+                    <img
+                      class="other-project-crab"
+                      alt=""
+                      src="./public/crabremovebgpreview-1@2x.png"
+                    />
+                    <time> Third Year Degree</time>
+                    <div class="discovery">
+                      <h1>WEB3.0 NFT Marketplace</h1>
+                    </div>
+                    <div class="scientist">
+                      <span>
+                        Decentralized NFT Marketplace made using TheGraph and
+                        Openzeppelin ERC721 Tokens.
+                      </span>
+                    </div>
+                  </div>
+                </li>
+
+                <li
+                  onclick="window.open('https://github.com/AditiNarkar/Web3.0-Hardhat-NFT-Tokens/')"
+                >
+                  <div class="timeline-child">
+                    <img
+                      class="other-project-crab"
+                      alt=""
+                      src="./public/crabremovebgpreview-1@2x.png"
+                    />
+                    <time> Third Year Degree</time>
+                    <div class="discovery">
+                      <h1>WEB3.0 NFT Tokens</h1>
+                    </div>
+                    <div class="scientist">
+                      <span>
+                        Built using Openzeppelin ERC721 tokens, Pinata, IPFS,
+                        Chainlink VRF Coordinator v2 and AggregatorV3Interface.
+                        Contains Basic NFT, Pinata based Dynamic NFT and Random
+                        IPFS based NFT.
+                      </span>
+                    </div>
+                  </div>
+                </li>
+
+                <li
+                  onclick="window.open('https://github.com/AditiNarkar/Web3.0-Hardhat-Lottery')"
+                >
+                  <div>
+                    <img
+                      class="other-project-crab"
+                      alt=""
+                      src="./public/crabremovebgpreview-1@2x.png"
+                    />
+                    <time> Third Year Degree</time>
+                    <div class="discovery">
+                      <h1>WEB3.0 Lottery</h1>
+                    </div>
+                    <div class="scientist">
+                      <span>
+                        Decentralized lottery platform made using Hardhat,
+                        Solidity, Chainlink VRF Coordinator v2.0 (with mocks)
+                        and Chainlink Keepers.
+                      </span>
+                    </div>
+                  </div>
+                </li>
+
+                <li
+                  onclick="window.open('https://github.com/AditiNarkar/Web3.0-FundMe-Hardhat')"
+                >
+                  <div>
+                    <img
+                      class="other-project-crab"
+                      alt=""
+                      src="./public/crabremovebgpreview-1@2x.png"
+                    />
+                    <time> Third Year Degree</time>
+                    <div class="discovery">
+                      <h1>WEB3.0 Fund Me</h1>
+                    </div>
+                    <div class="scientist">
+                      <span>
+                        Decentralized platform for funding money in contract and
+                        withdrawing whenever necessary using Solidity, Hardhat,
+                        Ethers, NextJS and AggregatorV3Interface.
+                      </span>
+                    </div>
+                  </div>
+                </li>
+
+                <li
+                  onclick="window.open('https://github.com/AditiNarkar/Akshaypatra-merged')"
+                >
+                  <div>
+                    <img
+                      class="other-project-crab"
+                      alt=""
+                      src="./public/crabremovebgpreview-1@2x.png"
+                    />
+                    <time> Third Year Degree</time>
+                    <div class="discovery">
+                      <h1>Akshaypatra</h1>
+                    </div>
+                    <div class="scientist">
+                      <span>
+                        A web application, made using MERN stack, aimed at
+                        bridging the gap between restaurants and
+                        non-governmental organisations (NGOs) to facilitate the
+                        donation of excess food to those in need.
+                      </span>
+                    </div>
+                  </div>
+                </li>
+
+                <li
                   onclick="window.open('https://github.com/AditiNarkar/Visual-basic-Hospital-Management-System')"
                 >
                   <div>
@@ -219,29 +358,19 @@
                     </div>
                   </div>
                 </li>
-
-                <!-- <li>
-                    <div>
-                      <img
-                      class="other-project-crab"
-                      alt=""
-                      src="./public/crabremovebgpreview-1@2x.png"
-                      />
-                      <time> Second Year Diploma</time>
-                      <div class="discovery">
-                        <h1>Visual-basic-Hospital-Management-System</h1>
-                       
-                      </div>
-                      <div class="scientist">
-                        <span> There are two logins, Admin and Patient. Uses MS Access as backend.</span>
-                      </div>
-                    </div>
-                  </li> -->
               </ul>
             </section>
 
             <!-- </div> -->
           </div>
+          <button class="button85" role="button">
+            <a
+              style="text-decoration: none; color: #1ecbe1"
+              href="https://adt-gallery.netlify.app/"
+              >Way to My Treasure Gallery</a
+            >
+          </button>
+
           <div class="major-container">
             <div class="model"><canvas class="webgl"></canvas></div>
 
