--- a/portfolio.html
+++ b/portfolio.html
@@ -679,7 +679,7 @@
                 >
                   <p class="udemy-course">
                     <span>
-                      <span class="udemy-course1">HackByte 2.0</span>
+                      <span class="udemy-course1">HackByte 2.0 (Hackathon)</span>
                       <span> </span>
                     </span>
                   </p>
