--- a/portfolio.html
+++ b/portfolio.html
@@ -639,6 +639,15 @@
                 <b class="dsa">DSA</b>
               </div>
 
+              <div class="fish2-1-parent-iot edu-animate">
+                <img
+                  class="fish1-1-icon-iot"
+                  alt=""
+                  src="./public/fish1-1@2x.png"
+                />
+                <b class="dsa">IOT</b>
+              </div>
+
               <div class="fish2-1-parent edu-animate">
                 <img
                   class="fish2-1-icon"
@@ -671,15 +680,21 @@
 
           <div class="cert-section">
             <div class="image-9-parent">
-              <img class="image-9-icon" alt="" src="./public/hackbyte2.png" />
+              <img
+                class="image-9-icon"
+                alt=""
+                src="./public/CodeLite_Pune.jpeg"
+              />
               <div class="udemy-course-php-container">
                 <a
                   style="text-decoration: none"
-                  href="https://drive.google.com/file/d/1LeIsVzXQRhmtqC1776ipAYX38h1OGXL8/view?usp=drive_link"
+                  href="https://drive.google.com/file/d/10lKVfZUwISmcP5an4sA5V9sjHhDsB095/view?usp=drive_link"
                 >
                   <p class="udemy-course">
                     <span>
-                      <span class="udemy-course1">HackByte 2.0 (Hackathon)</span>
+                      <span class="udemy-course1"
+                        >CODELITE (Hackathon in Pune, Maharashtra)</span
+                      >
                       <span> </span>
                     </span>
                   </p>
@@ -691,8 +706,80 @@
                           color: var(--color-skyblue);
                         "
                       >
-                        Won "Best Hack using MongoDB Atlas" Sponsor Track Prize
-                        for team "nopeace.js".</span
+                        Winner of "Web3" Track. Awarded with trophy, medal and
+                        cash prize.</span
+                      >
+                    </span>
+                  </p>
+                </a>
+              </div>
+            </div>
+
+            <div style="height: 7px"></div>
+
+            <div class="image-9-parent">
+              <img
+                class="image-9-icon"
+                alt=""
+                src="./public/MUJHacksLogo.jpeg"
+              />
+              <div class="udemy-course-php-container">
+                <a
+                  style="text-decoration: none"
+                  href="https://drive.google.com/file/d/10nqjVzmWbknEuKNNTBwsVX0tATKnsM2i/view?usp=drive_link"
+                >
+                  <p class="udemy-course">
+                    <span>
+                      <span class="udemy-course1"
+                        >MUJ HackX 2.0 (Hackathon in Jaipur, Rajasthan)</span
+                      >
+                      <span> </span>
+                    </span>
+                  </p>
+                  <p class="udemy-course">
+                    <span>
+                      <span
+                        style="
+                          font-size: var(--font-size-base);
+                          color: var(--color-skyblue);
+                        "
+                      >
+                        Bagged third runner-up position among 400+ international
+                        teams.</span
+                      >
+                    </span>
+                  </p>
+                </a>
+              </div>
+            </div>
+
+            <div style="height: 7px"></div>
+
+            <div class="image-9-parent">
+              <img class="image-9-icon" alt="" src="./public/hackbyte2.png" />
+              <div class="udemy-course-php-container">
+                <a
+                  style="text-decoration: none"
+                  href="https://drive.google.com/file/d/1LeIsVzXQRhmtqC1776ipAYX38h1OGXL8/view?usp=drive_link"
+                >
+                  <p class="udemy-course">
+                    <span>
+                      <span class="udemy-course1"
+                        >HackByte 2.0 (Hackathon in Jabalpur, MP)</span
+                      >
+                      <span> </span>
+                    </span>
+                  </p>
+                  <p class="udemy-course">
+                    <span>
+                      <span
+                        style="
+                          font-size: var(--font-size-base);
+                          color: var(--color-skyblue);
+                        "
+                      >
+                        Won "Best Hack using MongoDB Atlas" IoT Kit Sponsor
+                        Track Prize.</span
                       >
                     </span>
                   </p>
@@ -820,7 +907,8 @@
                           font-size: var(--font-size-base);
                           color: var(--color-skyblue);
                         "
-                        >Problem Solving through Programming in C</span
+                        >Bagged Silver in Problem Solving through Programming in
+                        C</span
                       >
                     </span>
                   </p>
@@ -858,12 +946,48 @@
               </div>
             </div>
             <div style="height: 7px"></div>
+
+            <div class="image-9-parent">
+              <img
+                class="image-9-icon"
+                alt=""
+                src="./public/MyCaptainLogo.jpg"
+              />
+
+              <div class="udemy-course-php-container">
+                <a
+                  style="text-decoration: none"
+                  href="https://drive.google.com/file/d/1ZaQEaG_KNzvq5J4WDv-goTrQgsh3mEQx/view?usp=drive_link"
+                >
+                  <p class="udemy-course">
+                    <span>
+                      <span class="udemy-course1">MYCAPTAIN Course</span>
+                      <span> </span>
+                    </span>
+                  </p>
+                  <p class="udemy-course">
+                    <span>
+                      <span
+                        style="
+                          font-size: var(--font-size-base);
+                          color: var(--color-skyblue);
+                        "
+                      >
+                        Recieved a LoR by Artificial Intelligence Workshop
+                        Mentor at MyCaptain after the course completion.
+                      </span>
+                    </span>
+                  </p>
+                </a>
+              </div>
+            </div>
+            <div style="height: 7px"></div>
           </div>
-          <img
+          <!-- <img
             class="crab-removebg-preview-2-icon"
             alt=""
             src="./public/crabremovebgpreview-2@2x.png"
-          />
+          /> -->
         </section>
 
         <section id="about_section">
