--- a/portfolio.html
+++ b/portfolio.html
@@ -147,6 +147,9 @@
         <section class="section-4" id="projects_section">
           <h3 class="projects">Projects</h3>
           <h3 class="projects major">Major</h3>
+          <h6 style="position: absolute; top: 100px; left: 775px">
+            (Press Number on keyboard to view)
+          </h6>
           <h3 class="projects others1">Others</h3>
           <div class="others-container">
             <!-- <div class="others-project"> -->
