--- a/portfolio.html
+++ b/portfolio.html
@@ -54,11 +54,17 @@
               </h1>
               <button>
                 <a
-                  style="text-decoration: none; color: white"
+                  style="
+                    z-index: 10000;
+                    text-decoration: none;
+                    color: white;
+                    cursor: pointer;
+                    font-size: 18px;
+                  "
                   href="resume/Aditi_Resumev3.pdf"
-                  download
+                  target="”_blank”"
                 >
-                  Download Resume
+                  View Resume
                 </a>
               </button>
             </div>
