--- a/portfolio.html
+++ b/portfolio.html
@@ -169,7 +169,7 @@
                     <img
                       class="other-project-crab"
                       alt=""
-                      src="./public/crabremovebgpreview-1@2x.png"
+                      src="./public/projects/DeFiLogo.jpeg"
                     />
                     <time> Third Year Degree</time>
                     <div class="discovery">
@@ -192,7 +192,7 @@
                     <img
                       class="other-project-crab"
                       alt=""
-                      src="./public/crabremovebgpreview-1@2x.png"
+                      src="./public/projects/NFT.jpeg"
                     />
                     <time> Third Year Degree</time>
                     <div class="discovery">
@@ -214,7 +214,7 @@
                     <img
                       class="other-project-crab"
                       alt=""
-                      src="./public/crabremovebgpreview-1@2x.png"
+                      src="./public/projects/Openzepplin.jpeg"
                     />
                     <time> Third Year Degree</time>
                     <div class="discovery">
@@ -238,7 +238,7 @@
                     <img
                       class="other-project-crab"
                       alt=""
-                      src="./public/crabremovebgpreview-1@2x.png"
+                      src="./public/projects/chainlink-logo.png"
                     />
                     <time> Third Year Degree</time>
                     <div class="discovery">
@@ -258,11 +258,11 @@
                   onclick="window.open('https://github.com/AditiNarkar/Web3.0-FundMe-Hardhat')"
                 >
                   <div>
-                    <img
+                    <!-- <img
                       class="other-project-crab"
                       alt=""
                       src="./public/crabremovebgpreview-1@2x.png"
-                    />
+                    /> -->
                     <time> Third Year Degree</time>
                     <div class="discovery">
                       <h1>WEB3.0 Fund Me</h1>
@@ -284,7 +284,7 @@
                     <img
                       class="other-project-crab"
                       alt=""
-                      src="./public/crabremovebgpreview-1@2x.png"
+                      src="./public/projects/Akshaypatra.jpeg"
                     />
                     <time> Third Year Degree</time>
                     <div class="discovery">
@@ -308,7 +308,7 @@
                     <img
                       class="other-project-crab"
                       alt=""
-                      src="./public/crabremovebgpreview-1@2x.png"
+                      src="./public/projects/VB.jpeg"
                     />
                     <time> Second Year Diploma </time>
                     <div class="discovery">
@@ -328,9 +328,10 @@
                 >
                   <div>
                     <img
+                      style="width: 50px"
                       class="other-project-crab"
                       alt=""
-                      src="./public/crabremovebgpreview-1@2x.png"
+                      src="./public/projects/java.jpeg"
                     />
                     <time> Second Year Diploma</time>
                     <div class="discovery">
@@ -346,13 +347,14 @@
                 </li>
 
                 <li
+                  style="padding-bottom: 70px"
                   onclick="window.open('https://github.com/AditiNarkar/Content-Management-with-PHP')"
                 >
                   <div>
                     <img
                       class="other-project-crab"
                       alt=""
-                      src="./public/crabremovebgpreview-1@2x.png"
+                      src="./public/projects/php.png"
                     />
                     <time> Second Year Diploma</time>
                     <div class="discovery">
@@ -1179,7 +1181,7 @@
               <p class="th-ssc">Engineering in IT</p>
               <p class="udemy-course">Terna College of Engineering,</p>
               <p class="udemy-course">Nerul (2025)</p>
-              <p class="udemy-course">Grade: NA</p>
+              <p class="udemy-course">Grade: 9.4</p>
             </div>
             <img class="image-8-icon" alt="" src="./public/image-8@2x.png" />
           </div>
