--- a/portfolio.html
+++ b/portfolio.html
@@ -1134,15 +1134,15 @@
 
               <b class="textClass">aditinarkar2004@gmail.com</b>
             </div>
-            <div class="number animate">
+            <!-- <div class="number animate">
               <img
                 class="phone2-1-icon"
                 alt=""
                 src="./public/contact-logo.png"
               />
 
-              <b class="textClass">+91 87793 09665</b>
-            </div>
+              <b class="textClass">+91</b>
+            </div> -->
             <div class="location animate">
               <img
                 class="phone2-1-icon"
